# BareMetalCppTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenDevCMD.bat  PrepareEnvironmentRPi.sh  PreparePicoSDK.cmd  README.md
.github/workflows/: BuildEnvironmentSetupTest.yaml
CMake/: CMakePresets_Cross_Common.json  CMakePresets_Cross_OnLinux.json  CMakePresets_Cross_OnWindows.json  toolchain-gcc-RPiPico.cmake  toolchain-gcc-armv7m.cmake
DevUtils/: OpenDevCMD.bat  PythonRequirements.txt  SetupDevCMD.sh  SetupDevEnv.bat  SetupDevEnv.sh  env_setup_actions.json
Devices/: STM32_RAM.ld
HollowPi/: CMakeLists.txt  hollow_pi.cpp
Project/: CMakeLists.txt  Test.cpp  main.cpp  platform.h
